--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
   
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ms_content_moderator_fe:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest .
   
       - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/ms_content_moderator_fe:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/frontend:latest
